--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         tools:context=".MainActivity">
 
         <EditText
-            android:id="@+id/name"
+            android:id="@+id/emailText"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="74dp"
@@ -47,7 +47,7 @@
             android:textColorHint="#646873"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/name" />
+            app:layout_constraintTop_toBottomOf="@+id/emailText" />
 
         <ImageView
             android:id="@+id/imageView"
