--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -13,7 +13,7 @@
         tools:context=".Register">
 
         <EditText
-            android:id="@+id/name"
+            android:id="@+id/emailText"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="74dp"
@@ -31,7 +31,7 @@
             app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
         <EditText
-            android:id="@+id/email"
+            android:id="@+id/nameText"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="74dp"
@@ -46,7 +46,7 @@
             android:textColorHint="#646873"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/name" />
+            app:layout_constraintTop_toBottomOf="@+id/emailText" />
 
         <EditText
             android:id="@+id/password2"
@@ -82,7 +82,7 @@
             android:textColorHint="#646873"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/email" />
+            app:layout_constraintTop_toBottomOf="@+id/nameText" />
 
         <ImageView
             android:id="@+id/imageView"
@@ -130,7 +130,7 @@
             >
 
             <Spinner
-                android:id="@+id/faculty"
+                android:id="@+id/facultyText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
