--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -22,7 +22,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="43dp"
         android:layout_marginEnd="32dp"
-        app:srcCompat="@drawable/ic_default_monochrome_white"
+        android:src="@drawable/ic_default_monochrome_white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -165,7 +165,7 @@
         android:layout_marginTop="12dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="12dp"
-        app:srcCompat="@drawable/ic_mode_edit_black_24dp"
+        android:src="@drawable/ic_mode_edit_black_24dp"
         app:layout_constraintBottom_toTopOf="@+id/emailText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
