--- a/app/src/main/res/menu/bottom_nav_menu_student.xml
+++ b/app/src/main/res/menu/bottom_nav_menu_student.xml
@@ -3,17 +3,18 @@
 
     <item
         android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_home" />
+        android:icon="@drawable/ic_poll_black_24dp"
+        android:title="Polls" />
 
-    <item
-        android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
+
+    <!--<item-->
+        <!--android:id="@+id/navigation_dashboard"-->
+        <!--android:icon="@drawable/ic_dashboard_black_24dp"-->
+        <!--android:title="@string/title_dashboard" />-->
 
     <item
         android:id="@+id/navigation_profile"
-        android:icon="@drawable/ic_user_24dp"
+        android:icon="@drawable/ic_person_black_24dp"
         android:title="Profile" />
 
 </menu>
