Insert PollGroups + Insert by MaxID

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,7 @@
             android:layout_marginStart="74dp"
             android:layout_marginTop="100dp"
             android:layout_marginEnd="74dp"
-            android:drawableLeft="@drawable/emailicon"
+            android:drawableLeft="@drawable/ic_mail_outline_black_24dp"
             android:ems="10"
             android:hint="Email"
             android:inputType="textEmailAddress"
@@ -38,7 +38,7 @@
             android:layout_marginStart="74dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="74dp"
-            android:drawableLeft="@drawable/passwordicon"
+            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
             android:ems="10"
             android:hint="Password"
             android:inputType="textPassword"
