--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -19,7 +19,7 @@
             android:layout_marginStart="74dp"
             android:layout_marginTop="42dp"
             android:layout_marginEnd="74dp"
-            android:drawableLeft="@drawable/usericon"
+            android:drawableLeft="@drawable/ic_person_outline_black_24dp"
             android:ems="10"
             android:hint="Your Name"
             android:inputType="textPersonName"
@@ -37,7 +37,7 @@
             android:layout_marginStart="74dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="74dp"
-            android:drawableLeft="@drawable/emailicon"
+            android:drawableLeft="@drawable/ic_mail_outline_black_24dp"
             android:ems="10"
             android:hint="Email"
             android:inputType="textEmailAddress"
@@ -55,7 +55,7 @@
             android:layout_marginStart="74dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="74dp"
-            android:drawableLeft="@drawable/passwordicon"
+            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
             android:ems="10"
             android:hint="Confirm Password"
             android:inputType="textPassword"
@@ -73,7 +73,7 @@
             android:layout_marginStart="74dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="74dp"
-            android:drawableLeft="@drawable/passwordicon"
+            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
             android:ems="10"
             android:hint="Password"
             android:inputType="textPassword"
@@ -89,7 +89,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="64dp"
+            android:layout_marginTop="32dp"
             android:layout_marginEnd="16dp"
             android:src="@drawable/ic_default_monochrome"
             app:layout_constraintEnd_toEndOf="parent"
@@ -102,7 +102,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="74dp"
-            android:layout_marginTop="43dp"
+            android:layout_marginTop="32dp"
             android:layout_marginEnd="74dp"
             android:layout_marginBottom="8dp"
             android:background="@drawable/roundedbutton"
