--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
+    <color name="colorPrimary">#3f4553</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#25bdd6</color>
 </resources>
